[package]
name = "photonio-macros"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["The PhotonIO Authors"]
homepage = "https://photondb.io"
repository = "https://github.com/photondb/photonio"
description = "Macros for PhotonIO."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
photonio = { version = "0.0.1", path = "../photonio" }
