[package]
name = "photonio-tokio"
version = "0.0.2"
edition = "2021"
license = "MIT"
authors = ["The PhotonIO Authors"]
homepage = "https://photondb.io"
repository = "https://github.com/photondb/photonio"
description = "A PhotonIO implementation based on Tokio."

[dependencies]
photonio-base = { version = "0.0.2", path = "../photonio-base" }
tokio = { version = "1.21", features = ["full"] }
futures = "0.3"
