[package]
name = "photonio-uring"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["The PhotonIO Authors"]
homepage = "https://photondb.io"
repository = "https://github.com/photondb/photonio"
description = "A PhotonIO implementation based on io-uring."

[dependencies]
photonio-base = { version = "0.0.1", path = "../photonio-base" }
io-uring = { version = "0.5", features = ["unstable"] }
futures = "0.3"
log = "0.4"
libc = "0.2"
num_cpus = "1.13"
slab = "0.4"
scoped-tls = "1.0"
socket2 = { version = "0.4", features = ["all"] }
