[package]
name = "photonio"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["The PhotonIO Authors"]
homepage = "https://photondb.io"
repository = "https://github.com/photondb/photonio"
description = "A runtime for asynchronous applications."

[features]
default = ["uring"]
uring = ["dep:photonio-uring"]
tokio = ["dep:photonio-tokio"]

[dependencies]
photonio-uring = { version = "0.0.1", path = "../photonio-uring", optional = true }
photonio-tokio = { version = "0.0.1", path = "../photonio-tokio", optional = true }
photonio-macros = { version = "0.0.1", path = "../photonio-macros" }
