[package]
name = "photonio"
version = "0.0.3"
edition = "2021"
license = "MIT"
authors = ["The PhotonIO Authors"]
homepage = "https://photondb.io"
repository = "https://github.com/photondb/photonio"
description = "A runtime for asynchronous applications."

[features]
default = ["uring"]
uring = ["dep:photonio-uring"]
tokio = ["dep:photonio-tokio"]

[dependencies]
photonio-macros = { version = "0.0.3", path = "../photonio-macros" }

[target.'cfg(target_os = "linux")'.dependencies]
photonio-uring = { version = "0.0.3", path = "../photonio-uring", optional = true }
photonio-tokio = { version = "0.0.3", path = "../photonio-tokio", optional = true }

[target.'cfg(not(target_os = "linux"))'.dependencies]
photonio-tokio = { version = "0.0.3", path = "../photonio-tokio" }

[dev-dependencies]
env_logger = "0.9"
log = "0.4.17"
